# swagger_output.json
@@ -14,6 +14,18 @@
   "consumes": [],
   "produces": [],
   "paths": {
+    "/api/v1/post/all": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/{industry}/getAll": {
       "get": {
         "tags": [],
